--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -26,5 +27,6 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.3.1"
-  }
+  },
+  "homepage": "https://uffylane.github.io/the-underdog/"
 }
